# chatbot-furia

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/modules/chat/: chat_controller.py  chat_repository.py  chat_usecase.py  chat_viewmodel.py
src/modules/health/: health_controller.py  health_usecase.py  health_viewmodel.py
src/modules/history/: history_controller.py  history_repository.py  history_usecase.py  history_viewmodel.py
src/shared/entities/: Chat.py
src/shared/enums/: chat_type.py
src/shared/utils/: to_brasilia.py
