[project]
name = "chatbot-furia"
version = "0.1.0"
description = ""
authors = [
    {name = "cassmatheuss"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "hltv-data (>=0.4.0,<0.5.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pymongo (>=4.12.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
